# MoneyMannage

./: Cargo.toml  README.md
moneymannage/: Cargo.toml
moneymannage/src/: errors.rs  lib.rs
moneymannage/src/instructions/: add_account.rs  create_main_account.rs  mod.rs  transfer.rs
moneymannage/src/state/: accounts.rs
programs/moneymannage/: Cargo.toml
programs/moneymannage/src/: lib.rs
programs/moneymannage/src/instructions/: add_account.rs  create_main_account.rs  mod.rs  transfer.rs
programs/moneymannage/src/state/: accounts.rs
programs/moneymannage/src/utils/: common.rs  mod.rs
src/: main.rs
src/functions/: add_account.rs  create_main_account.rs  transfer.rs
