[package]
name = "money"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
moneymannage= { path = "./moneymannage", features = ["no-entrypoint"] }
anchor-client = { version = "0.26.0", features = ["debug"] }
anyhow = "1.0.68"
shellexpand = "3.0.0"